crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__Correct_Doctype_lowercase.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"<!DOCTYPE html>\")"
---
[
    Token {
        data: "",
        attrs: Some(
            {
                "!$DOCTYPE html": Some(
                    (
                        "!DOCTYPE html",
                        NoValue,
                    ),
                ),
            },
        ),
        kind: ProcessingInstruction,
        is_implied: false,
    },
]
