crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__ampersand_space_eof.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"& \")"
---
[
    Token {
        data: "&",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: " ",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
