crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__ascii_decimal_entity.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(\"&#0036;\")"
---
[
    Token {
        data: "$",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
