crates/rs_html_parser/tests/snapshots/html5lib_test1_test__tests__ascii_hexadecimal_entity.snap
---
source: crates/rs_html_parser/tests/html5lib_test1_test.rs
expression: "parser_test(r####\"&#x3f;\"####)"
---
[
    Token {
        data: "?",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
